--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,30 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:fitsSystemWindows="true">
 
-    <FrameLayout
-        android:id="@+id/success_linear_layout"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/input_layout"
+        android:layout_margin="5dp"
+        style="@style/wikipedia_textInputLayout"
+        android:hint="@string/button_search"
+        app:counterEnabled="true"
+        android:visibility="visible"
+        app:counterMaxLength="20"
+        app:endIconCheckable="true"
+        app:endIconDrawable="@drawable/ic_search"
+        app:helperText="@string/search_hint"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="0dp">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/input_edit_text"
+            android:layout_width = "match_parent"
+            android:layout_height="wrap_content"
+            android:imeOptions="actionSearch"
+            android:inputType="text" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/main_activity_recyclerview"
         android:layout_width="match_parent"
-        android:gravity="center"
-        android:layout_height="match_parent">
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/main_activity_recyclerview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/search_fab"
-            android:src="@drawable/ic_search"
-            android:layout_width="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_marginBottom="@dimen/margin_medium"
-            android:layout_marginEnd="@dimen/margin_medium"
-            android:layout_height="wrap_content"/>
-    </FrameLayout>
+        android:layout_height="match_parent"
+        android:layout_marginTop="88dp"
+        app:layout_constraintTop_toBottomOf="@+id/input_layout"
+        tools:layout_editor_absoluteX="0dp" />
 
     <FrameLayout
         android:id="@+id/loading_frame_layout"
@@ -50,6 +62,7 @@
         android:gravity="center"
         android:orientation="vertical"
         android:visibility="gone"
+        android:background="@color/black_transparent"
         android:id="@+id/error_linear_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -58,6 +71,7 @@
             android:id="@+id/error_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/white"
             android:text="@string/error_textview_stub"/>
 
         <com.google.android.material.button.MaterialButton
@@ -66,4 +80,4 @@
             android:layout_height="wrap_content"
             android:text="@string/reload_button"/>
     </LinearLayout>
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
